tests/syntax-error/DuplicateTypeSignature.vix
test : Int
test : Int
test = 123
